@@ -2,16 +2,17 @@ package com.a5lab.tabr.domain.tenants;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.model;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.view;
 
-import com.a5lab.tabr.AbstractControllerTests;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+
 import org.junit.Test;
 import org.junit.jupiter.api.Assertions;
 import org.mockito.Mockito;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.Page;
@@ -20,21 +21,29 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MvcResult;
 
+import com.a5lab.tabr.AbstractControllerTests;
+
 @WebMvcTest(TenantsCfgController.class)
 public class TenantsCfgControllerTests extends AbstractControllerTests {
   @MockBean
   private TenantService tenantService;
+  @Autowired
+  private TenantsCfgController tenantsCfgController;
 
   @Test
   public void shouldGetTenants() throws Exception {
     final TenantDto tenantDto = new TenantDto(10L, "my title", "my description");
-    List<TenantDto> tenantList = Arrays.asList(tenantDto);
+    List<TenantDto> tenantList = List.of(tenantDto);
     Page<TenantDto> page = new PageImpl<>(tenantList);
     Mockito.when(tenantService.findAll(Pageable.ofSize(100))).thenReturn(page);
 
     MvcResult result = mockMvc.perform(get("/settings/tenants"))
         .andExpect(status().isOk())
+        .andExpect(view().name("settings/tenants/index"))
+        .andExpect(model().attributeExists("tenantDtoPage"))
+        .andExpect(model().attributeExists("pageNumbers"))
         .andReturn();
+
     String content = result.getResponse().getContentAsString();
 
     Assertions.assertTrue(content.contains(tenantDto.getTitle()));
